--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
   <script language="javascript" type="text/javascript" src="p5/p5.dom.min.js"></script>
   <script language="javascript" type="text/javascript" src="p5/p5.sound.min.js"></script>
 
+  <script language="javascript" type="text/javascript" src="/socket.io/socket.io.js"></script>
+
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
 
   <style>
     *{
-      background:gray
+      background:gray;
+      overflow:hidden;
     }
   </style>
 
